--- a/index.html
+++ b/index.html
@@ -27,5 +27,12 @@
     <script src="https://kit.fontawesome.com/f5ca19a2cd.js" crossorigin="anonymous"></script>
     <title>Front-end developer Maria Montyeva</title>
   </head>
-  <body></body>
+  <body>
+    <div class="hero">
+    <p>🤝Hello! I am</p>
+    <h1>Maria Montyeva</h1>
+   <h2 class="mb-5">Front-end developer from Kyiv, Ukraine</h2>
+   <a href="#" class="btn btn-branding">Contact me</a>
+   </div>
+  </body>
 </html>
