Added content design

--- a/index.html
+++ b/index.html
@@ -32,7 +32,48 @@
     <p>🤝Hello! I am</p>
     <h1>Maria Montyeva</h1>
    <h2 class="mb-5">Front-end developer from Kyiv, Ukraine</h2>
+   <div>
    <a href="#" class="btn btn-branding">Contact me</a>
    </div>
+   </div>
+   <p class="text-center m-5">Featured Project which my best projects be choice to show</p>
+   <div class="container">
+    <div class="row mb-5">
+      <div class="col d-none d-lg-block">
+        <img src="img/yogurt.png" alt="" class="img-fluid" />
+   </div>
+   <div class="col-6">
+    <div class="project-description">
+   <h2 class="mb-5"> Yogurt App </h2>
+   <p class="mb-5 text-meted">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by</p>
+<a href="" class="btn btn-branding-outline"> View project </a>
+</div>
+</div>
+</div>
+ <div class="row mb-5">
+   <div class="col-6">
+    <div class="project-description">
+   <h2 class="mb-5"> Weather App </h2>
+   <p class="mb-5 text-meted">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by</p>
+<a href="" class="btn btn-branding-outline"> View project </a>
+</div>
+</div>
+<div class="col d-none d-lg-block">
+  <img src="img/weather.png" alt="" class="img-fluid" />
+   </div>
+</div>
+ <div class="row mb-5">
+      <div class="col d-none d-lg-block">
+        <img src="img/dictionary.png" alt="" class="img-fluid" />
+   </div>
+   <div class="col-6">
+    <div class="project-description">
+   <h2 class="mb-5"> Dictionary App </h2>
+   <p class="mb-5 text-meted">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by</p>
+<a href="" class="btn btn-branding-outline"> View project </a>
+</div>
+</div>
+</div>
+</div>
   </body>
 </html>
