--- a/index.html
+++ b/index.html
@@ -24,56 +24,120 @@
       integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
       crossorigin="anonymous"
     ></script>
-    <script src="https://kit.fontawesome.com/f5ca19a2cd.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/f5ca19a2cd.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Front-end developer Maria Montyeva</title>
   </head>
   <body>
+    <nav class="navbar navbar-expand-lg bg-light fixed-top ps-5">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="/">Maria Montyeva</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="/l">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/about.html">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/projects.html">My projects</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/about.html#email"">Contacts</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
     <div class="hero">
-    <p>🤝Hello! I am</p>
-    <h1>Maria Montyeva</h1>
-   <h2 class="mb-5">Front-end developer from Kyiv, Ukraine</h2>
-   <div>
-   <a href="#" class="btn btn-branding">Contact me</a>
-   </div>
-   </div>
-   <p class="text-center m-5">Featured Project which my best projects be choice to show</p>
-   <div class="container">
-    <div class="row mb-5">
-      <div class="col d-none d-lg-block">
-        <img src="img/yogurt.png" alt="" class="img-fluid" />
-   </div>
-   <div class="col-6">
-    <div class="project-description">
-   <h2 class="mb-5"> Yogurt App </h2>
-   <p class="mb-5 text-meted">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by</p>
-<a href="" class="btn btn-branding-outline"> View project </a>
-</div>
-</div>
-</div>
- <div class="row mb-5">
-   <div class="col-6">
-    <div class="project-description">
-   <h2 class="mb-5"> Weather App </h2>
-   <p class="mb-5 text-meted">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by</p>
-<a href="" class="btn btn-branding-outline"> View project </a>
-</div>
-</div>
-<div class="col d-none d-lg-block">
-  <img src="img/weather.png" alt="" class="img-fluid" />
-   </div>
-</div>
- <div class="row mb-5">
-      <div class="col d-none d-lg-block">
-        <img src="img/dictionary.png" alt="" class="img-fluid" />
-   </div>
-   <div class="col-6">
-    <div class="project-description">
-   <h2 class="mb-5"> Dictionary App </h2>
-   <p class="mb-5 text-meted">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by</p>
-<a href="" class="btn btn-branding-outline"> View project </a>
-</div>
-</div>
-</div>
-</div>
+      <p class="text-center fs-1 mb-4">🤝Hello! I am</p>
+      <h1 class="mb-4">Maria Montyeva</h1>
+      <h2 class="mb-5 opacity-50">🇺🇦 Front-end developer, based in Kyiv, Ukraine</h2>
+      <div>
+        <a href="#" class="btn btn-branding">Contact me</a>
+      </div>
+    </div>
+    <p class="text-center m-5">
+      Featured Project which my best projects be choice to show
+    </p>
+    <div class="container">
+      <div class="row mb-5">
+        <div class="col d-none d-lg-block">
+          <img src="img/pets.png" alt="" class="img-fluid rounded-2" />
+        </div>
+        <div class="col-6">
+          <div class="project-description">
+            <h2 class="mb-5">Pets App</h2>
+            <p class="mb-5 text-meted">
+              Far far away, behind the word mountains, far from the countries
+              Vokalia and Consonantia, there live the blind texts. Separated
+              they live in Bookmarksgrove right at the coast of the Semantics, a
+              large language ocean. A small river named Duden flows by
+            </p>
+            <a href="/landing-page.html" class="btn btn-branding-outline"> View project </a>
+          </div>
+        </div>
+      </div>
+      <div class="row mb-5">
+        <div class="col-6">
+          <div class="project-description">
+            <h2 class="mb-5">Weather App</h2>
+            <p class="mb-5 text-meted">
+              Far far away, behind the word mountains, far from the countries
+              Vokalia and Consonantia, there live the blind texts. Separated
+              they live in Bookmarksgrove right at the coast of the Semantics, a
+              large language ocean. A small river named Duden flows by
+            </p>
+            <a href="https://weather-sandmood.netlify.app/" class="btn btn-branding-outline"> View project </a>
+          </div>
+        </div>
+        <div class="col d-none d-lg-block">
+          <img src="img/weather2.png" alt="" class="img-fluid rounded-2" />
+        </div>
+      </div>
+      <div class="row mb-5">
+        <div class="col d-none d-lg-block">
+          <img src="img/croissant.png" alt="" class="img-fluid rounded-2" />
+        </div>
+        <div class="col-6">
+          <div class="project-description">
+            <h2 class="mb-5">Croissant App</h2>
+            <p class="mb-5 text-meted">
+              Far far away, behind the word mountains, far from the countries
+              Vokalia and Consonantia, there live the blind texts. Separated
+              they live in Bookmarksgrove right at the coast of the Semantics, a
+              large language ocean. A small river named Duden flows by
+            </p>
+            <a href="https://croissant-sandmood.netlify.app/" class="btn btn-branding-outline"> View project </a>
+          </div>
+        </div>
+        </div>
+        <footer>
+        <div class="social-media">
+            <div>
+              <a href="https://www.instagram.com/sandmood/"><i class="fa-brands fa-instagram fa-2xl"></i></a>
+              </div>
+              <div>
+               <a href="https://www.facebook.com/maria.montyeva"><i class="fa-brands fa-facebook fa-2xl"></i></a>
+              </div>
+               <div>
+               <a href=" https://www.linkedin.com/in/maria-montyeva-b4243595/"><i class="fa-brands fa-linkedin-in fa-2xl"></i></a>
+              </div>
+              </footer>
+            </div>
   </body>
 </html>
