--- a/about.html
+++ b/about.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Playfair+Display:wght@400;500;700&family=Poppins:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -11,44 +19,50 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="/src/style.css" />
-    <title>Frontend developer Maria Montyeva</title>
-    <meta name="description" content="The most popular - Frontend developing, SEO" />
-  </head>
-  <body>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
       crossorigin="anonymous"
     ></script>
-    <nav class="navbar navbar-expand-lg bg-light fixed-top ps-5">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="/">Maria Montyeva</a>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarNav"
-            aria-controls="navbarNav"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/about.html">About</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/about.html#email"">Contacts</a>
-              </li>
-            </ul>
-          </div>
+    <script
+      src="https://kit.fontawesome.com/f5ca19a2cd.js"
+      crossorigin="anonymous"
+    ></script>
+    <title>Front-end developer Maria Montyeva</title>
+  </head>
+  <body>
+   <nav class="navbar navbar-expand-lg bg-light fixed-top ps-5">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="/">Maria Montyeva</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="/l">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/about.html">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/projects.html">My projects</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/about.html#email"">Contacts</a>
+            </li>
+          </ul>
         </div>
-      </nav>
+      </div>
+    </nav>
     <h1>About me</h1>
     <h3>Front-end developer from Kyiv, Ukraine 🇺🇦</h3>
     <h4 class="mt-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
