--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
               <a class="nav-link" href="/projects.html">My projects</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/about.html#email"">Contacts</a>
+              <a class="nav-link" href="/about.html#email">Contacts</a>
             </li>
           </ul>
         </div>
