Change names of files

--- a/about.html
+++ b/about.html
@@ -63,23 +63,25 @@
         </div>
       </div>
     </nav>
-    <h1>About me</h1>
-    <h3>Front-end developer from Kyiv, Ukraine 🇺🇦</h3>
+    <div class="hero">
+    <h1 class="mb-4">About me</h1>
+    <h2 class="mb-5 opacity-50">🇺🇦 Front-end developer, based in Kyiv, Ukraine</h2>
     <h4 class="mt-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
         aperiam provident tempora? Cumque adipisci, non dolorem quia, odit qui
         alias veniam excepturi rem dolor fugit dignissimos, sed voluptatum
         blanditiis harum.
     </h4>
+    </div>
     <div class="container">
-      <div class="row">
+      <div class="row mt-5">
         <div class="col-4">
-            <img src="/images/yoga.png" class="img-fluid rounded p-2 shadow" title="Yoga project"/>
+            <img src="/img/pets.png" class="img-fluid rounded p-2 shadow" title="Pets project"/>
         </div>
         <div class="col-4">
-            <img src="/images/weather.png" class="img-fluid rounded p-2 shadow" title="Weather forecast"/>
+            <img src="/img/weather.png" class="img-fluid rounded p-2 shadow" title="Weather App"/>
         </div>
         <div class="col-4">
-            <img src="/images/yogurt.png" class="img-fluid rounded p-2 shadow" title="Yogurt project"/>
+            <img src="/img/croissant.png" class="img-fluid rounded p-2 shadow" title="Croissant project"/>
         </div>
       </div>
     
