--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
           </div>
         </div>
         <div class="col d-none d-lg-block">
-          <img src="img/weather2.png" alt="" class="img-fluid rounded-2" />
+          <img src="img/weather.png" alt="" class="img-fluid rounded-2" />
         </div>
       </div>
       <div class="row mb-5">
