--- a/about1.html
+++ b/about1.html
@@ -31,7 +31,7 @@
     <title>Front-end developer Maria Montyeva</title>
   </head>
   <body>
-   <nav class="navbar navbar-expand-lg bg-light fixed-top ps-5">
+      <nav class="navbar navbar-expand-lg bg-light fixed-top ps-5">
       <div class="container-fluid">
         <a class="navbar-brand" href="/">Maria Montyeva</a>
         <button
@@ -63,40 +63,23 @@
         </div>
       </div>
     </nav>
-    <div class="about-section">
+    <div class="about-section container">
       <div class="row">
-        <div class="col-4">
-          <img src="/img/logo2.png" title="Maria Montyeva" class="mt-n1" />
-        </div>
-        <div class="col-6">
-    <h1 class="mb-4">Maria Montyeva</h1>
-    <h2 class="mb-5 text-secondary">🇺🇦 Front-end developer, based in Kyiv, Ukraine</h2>
-    <h4 class="mt-4">Economist, foreign economic activity specialist, MOONGOOSE outerwear brand owner. Novice Front-end, JS delevoper. In the process of studying Fullstack. 
-    </h4>
-     <a href="/projects.html" class="btn btn-branding mt-5">See my projects</a>
-    </div>
-    </div>
-    </div>
-    <div class="container">
-      <div class="row mt-5">
-        <div class="col-4">
-            <img src="/img/pets.png" class="img-fluid rounded p-2 shadow" title="Pets project"/>
-        </div>
-        <div class="col-4">
-            <img src="/img/weather.png" class="img-fluid rounded p-2 shadow" title="Weather App"/>
-        </div>
-        <div class="col-4">
-            <img src="/img/croissant.png" class="img-fluid rounded p-2 shadow" title="Croissant project"/>
-        </div>
+        <div class="col-lg-7">
+          <div class="about-section-content">
+          <h1 class="mb-4">About me</h1>
+          <h2 class="mb-4">🇺🇦 Front-end developer, based in Kyiv, Ukraine</h2>
+          <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
+        aperiam provident tempora? Cumque adipisci, non dolorem quia, odit qui
+        alias veniam excepturi rem dolor fugit dignissimos, sed voluptatum
+        blanditiis harum.
+          </p>
+          <a href="" class="btn btn-branding">See my projects</a>
+          </div>
       </div>
-    
+    <div class="col-lg-5">
+    <img src="/img/logo2.png" alt="" class="image-fluid">
     </div>
-  </div>
-    <div class="contact">
-      <h2 class="text-center">📮 Contact me</h2>
-      <a href="mailto:sandmood@gmail.com" class="email-link" title="e-mail to Maria Montyeva">
-        sandmood@gmail.com
-      </a>
     </div>
     </div>
     <footer>
