--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <div class="hero">
       <p class="text-center fs-1 mb-4">🤝Hello! I am</p>
       <h1 class="mb-4">Maria Montyeva</h1>
-      <h2 class="mb-5 opacity-50">🇺🇦 Front-end developer, based in Kyiv, Ukraine</h2>
+      <h2 class="mb-5 text-secondary">🇺🇦 Front-end developer, based in Kyiv, Ukraine</h2>
       <div>
         <a href="#" class="btn btn-branding">Contact me</a>
       </div>
