--- a/about.html
+++ b/about.html
@@ -99,13 +99,13 @@
       </a>
     </div>
     </div>
-    <footer>
+     <footer>
         <div class="social-media">
-            <div>
-              <a href="https://www.instagram.com/sandmood/"><i class="fa-brands fa-instagram fa-2xl"></i></a>
-              </div>
               <div>
                <a href="https://www.facebook.com/maria.montyeva"><i class="fa-brands fa-facebook fa-2xl"></i></a>
+              </div>
+              <div>
+              <a href="https://github.com/sandmood?tab=repositories"><i class="fa-brands fa-github"></i></a>
               </div>
                <div>
                <a href=" https://www.linkedin.com/in/maria-montyeva-b4243595/"><i class="fa-brands fa-linkedin-in fa-2xl"></i></a>
