social media icons size updated

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                <a href="https://www.facebook.com/maria.montyeva"><i class="fa-brands fa-facebook fa-2xl"></i></a>
               </div>
               <div>
-              <a href="https://github.com/sandmood?tab=repositories"><i class="fa-brands fa-github"></i></a>
+              <a href="https://github.com/sandmood?tab=repositories"><i class="fa-brands fa-github fa-2xl"></i></a>
               </div>
                <div>
                <a href=" https://www.linkedin.com/in/maria-montyeva-b4243595/"><i class="fa-brands fa-linkedin-in fa-2xl"></i></a>
