links for img added, img hover added

--- a/projects.html
+++ b/projects.html
@@ -70,17 +70,17 @@
     <div class="container">
       <div class="row">
         <div class="col-md-4 mb-4">
-            <img src="/img/pets.png" class="img-fluid rounded p-2 shadow" title="Pets project"/>
+             <a href="/landing-page.html"><img src="/img/pets.png" class="img-fluid rounded p-2 shadow" title="Pets project"/></a>
             <h3 class="text-center">Pets Project</h3>
             <p class="text-center text-muted">Built with HTML and CSS </p>
         </div>
         <div class="col-md-4 mb-4">
-            <img src="/img/weather.png" class="img-fluid rounded p-2 shadow" title="Weather App"/>
+            <a href="https://weather-sandmood.netlify.app/"><img src="/img/weather.png" class="img-fluid rounded p-2 shadow" title="Weather App"/></a>
             <h3 class="text-center">Weather Project</h3>
             <p class="text-center text-muted">Built with HTML, CSS and JS </p>
         </div>
         <div class="col-md-4 mb-4">
-            <img src="/img/croissant.png" class="img-fluid rounded p-2 shadow" title="Croissant project"/>
+            <a href="https://croissant-sandmood.netlify.app/"><img src="/img/croissant.png" class="img-fluid rounded p-2 shadow" title="Croissant project"/></a>
             <h3 class="text-center">Croissant Project</h3>
             <p class="text-center text-muted">Built with HTML and CSS </p>
         </div>
