--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
+              <a class="nav-link active" aria-current="page" href="/">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/about.html">About</a>
@@ -57,7 +57,7 @@
               <a class="nav-link" href="/projects.html">My projects</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/about.html#email"">Contacts</a>
+              <a class="nav-link" href="/about.html#email">Contacts</a>
             </li>
           </ul>
         </div>
