--- a/index.html
+++ b/index.html
@@ -66,8 +66,7 @@
       <p class="text-center fs-1 mb-4">🤝Hello! I am</p>
       <h1 class="mb-4">Maria Montyeva</h1>
       <h2 class="mb-5 text-secondary">🇺🇦 Front-end developer, based in Kyiv, Ukraine</h2>
-      <div>
-        <a href="#" class="btn btn-branding">Contact me</a>
+      <div><a href="#" class="btn btn-branding">Contact me</a>
       </div>
     </div>
     <p class="text-center m-5">
@@ -75,10 +74,10 @@
     </p>
     <div class="container">
       <div class="row mb-5">
-        <div class="col d-none d-lg-block">
+        <div class="col-md-6 d-none d-lg-block">
           <img src="img/pets.png" alt="" class="img-fluid rounded-2" />
         </div>
-        <div class="col-6">
+        <div class="col-md-6">
           <div class="project-description">
             <h2 class="mb-5">Pets App</h2>
             <p class="mb-5 text-meted">
@@ -92,7 +91,7 @@
         </div>
       </div>
       <div class="row mb-5">
-        <div class="col-6">
+        <div class="col-md-6">
           <div class="project-description">
             <h2 class="mb-5">Weather App</h2>
             <p class="mb-5 text-meted">
@@ -104,15 +103,15 @@
             <a href="https://weather-sandmood.netlify.app/" class="btn btn-branding-outline"> View project </a>
           </div>
         </div>
-        <div class="col d-none d-lg-block">
+        <div class="col-md-6 d-none d-lg-block">
           <img src="img/weather.png" alt="" class="img-fluid rounded-2" />
         </div>
       </div>
       <div class="row mb-5">
-        <div class="col d-none d-lg-block">
+        <div class="col-md-6 d-none d-lg-block">
           <img src="img/croissant.png" alt="" class="img-fluid rounded-2" />
         </div>
-        <div class="col-6">
+        <div class="col-md-6">
           <div class="project-description">
             <h2 class="mb-5">Croissant App</h2>
             <p class="mb-5 text-meted">
@@ -123,6 +122,7 @@
             </p>
             <a href="https://croissant-sandmood.netlify.app/" class="btn btn-branding-outline"> View project </a>
           </div>
+        </div>
         </div>
         </div>
         <footer>
@@ -136,7 +136,7 @@
                <div>
                <a href=" https://www.linkedin.com/in/maria-montyeva-b4243595/"><i class="fa-brands fa-linkedin-in fa-2xl"></i></a>
               </div>
+              </div>
               </footer>
-            </div>
   </body>
 </html>
