--- a/about.html
+++ b/about.html
@@ -64,10 +64,10 @@
     </nav>
     <div class="about-section">
       <div class="row">
-        <div class="col-4">
+        <div class="col-md-4">
           <img src="/img/logo2.png" title="Maria Montyeva" class="mt-n1" />
         </div>
-        <div class="col-6">
+        <div class="col-md-6">
     <h1 class="mb-4">Maria Montyeva</h1>
     <h2 class="mb-5 text-secondary">🇺🇦 Front-end developer, based in Kyiv, Ukraine</h2>
     <h4 class="mt-4">Economist, foreign economic activity specialist, MOONGOOSE outerwear brand owner. Novice Front-end, JS delevoper. In the process of studying Fullstack. 
@@ -78,13 +78,13 @@
     </div>
     <div class="container">
       <div class="row mt-5">
-        <div class="col-4">
+        <div class="col-md-4">
             <img src="/img/pets.png" class="img-fluid rounded p-2 shadow" title="Pets project"/>
         </div>
-        <div class="col-4">
+        <div class="col-md-4">
             <img src="/img/weather.png" class="img-fluid rounded p-2 shadow" title="Weather App"/>
         </div>
-        <div class="col-4">
+        <div class="col-md-4">
             <img src="/img/croissant.png" class="img-fluid rounded p-2 shadow" title="Croissant project"/>
         </div>
       </div>
