contact page added, about changes

--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
               <a class="nav-link" href="/projects.html">My projects</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/about.html#email">Contacts</a>
+              <a class="nav-link" href="/contact.html">Contacts</a>
             </li>
           </ul>
         </div>
@@ -76,28 +76,119 @@
     </div>
     </div>
     </div>
-    <div class="container">
-      <div class="row mt-5">
-        <div class="col-md-4">
-            <img src="/img/pets.png" class="img-fluid rounded p-2 shadow" title="Pets project"/>
+    <div class="work-experience container mt-5">
+      <div class="row">
+        <div class="col-md-6 work">
+          <h3 class="title">Work Experience</h3>
+          <!--Company 1-->
+          <div class="companies">
+            <h4 class="position">
+              Director, owner of the MOONGOOSE
+              brand <span class="organization">LLC "MOONGOOSE CO."</span>
+            </h4>
+            <p class="period">October 2016 –  up to now <span class="line"> | </span>Ukraine</p>
+            <ul class="worklist">
+              <li class="worklist-item">Foundation of a fashion brand from start.
+              </li>
+              <li class="worklist-item">Development of brand strategy.
+              </li>
+              <li class="worklist-item">Positioning of the brand in the Ukrainian and foreign markets.</li>
+              <li class="worklist-item">Organization of own production of the product (tailoring of down jackets).</li>
+              <li class="worklist-item">Bringing the brand to the international market. Attraction of foreign buyers (B2B).
+              </li>
+              <li class="worklist-item">Organization of internal sales on own sites and for sale (B2C).</li> 
+            </ul>
+          </div>
+          <!--Company 2-->
+          <div class="companies">
+            <h4 class="position">Director <span class="organization">LLC Mona Collection</span></h4>
+            <p class="period">December 2006 – October 2016 <span class="line"> | </span> Ukraine</p>
+            <ul class="worklist">
+              <li class="worklist-item">Determination of income and expenses, receipts and deductions of funds.
+              </li>
+              <li class="worklist-item">Work with foreign partners (В2В).</li>
+              <li class="worklist-item">Conclusion and maintenance of international contracts.</li>
+              <li class="worklist-item">Сonducting direct negotiations with foreign partners.</li>
+              <li class="worklist-item">Fulfillment of settlement and payment obligations.</li>
+            </ul>
+          </div>
+          <!--Company 3-->
+          <div class="companies">
+            <h4 class="position">Economics and Finance Deputy <span class="organization">JSC "Ukrainian Down Products"</span></h4>
+            <p class="period">September 2003 –  December 2006 <span class="line"> | </span> Ukraine</p>
+            <ul class="worklist">
+              <li class="worklist-item">Work with primary documentation (drawing up, verification, control): receipts, expenditures, return invoices, certificates of work performed (services), reconciliation certificates.</li>
+              <li class="worklist-item">Control over the execution of primary documentation.</li>
+              <li class="worklist-item">Сonducting an annual inventory of fixed assets, intangible assets, goods and materials.</li>
+              <li class="worklist-item">Control over incoming and outgoing financial flows.</li>
+              <li class="worklist-item">Search for foreign suppliers, attraction of foreign partners.</li>
+            </ul>
+          </div>
+          </div>
+          <!--Education-->
+          <div class="col-md-6">
+            <div class="education mt-0">
+            <h3 class="title">Education</h3>
+            <h4 class="organization">Kyiv National Economic University. V. Hetman</h4>
+            <h2 class="faculty">Magistry of Faculty of Accounting and Audit</h2>
+            <p class="period">September 1998 – May 2003 <span class="line"> | </span> Ukraine</p>
+            </div>
+             <div class="companies mt-4">
+             <h4 class="position">
+              Online Coding Workshops for Women <span class="organization">SheCodes</span>
+            </h4>
+            <h2 class="faculty">Front-end developer</h2>
+            <p class="period">June 2022 – up to now <span class="line"> | </span> Europe</p>
+            </div>
+                 <!--Tech skills-->
+        <div class="tech-skills mt-4">
+          <h3 class="sidebar-title">Tech Skills</h3>
+          <ul class="tech-skills-list">
+            <li class="tech-skills-item">
+              <span class="tech-skills-text">HTML5</span>
+            </li>
+            <li class="tech-skills-item">
+              <span class="tech-skills-text">CSS3</span>
+            </li>
+            <li class="tech-skills-item">
+              <span class="tech-skills-text">GitHub</span>
+            </li>
+            <li class="tech-skills-item">
+              <span class="tech-skills-text">Python</span>
+            </li>
+            <li class="tech-skills-item">
+              <span class="tech-skills-text">JavaScript</span>
+            </li>
+            <li class="tech-skills-item">
+              <span class="tech-skills-text">React.js</span>
+            </li>
+            <li class="tech-skills-item">
+              <span class="tech-skills-text">Node.js</span>
+            </li>
+          </ul>
         </div>
-        <div class="col-md-4">
-            <img src="/img/weather.png" class="img-fluid rounded p-2 shadow" title="Weather App"/>
+        <!--Soft skills-->
+        <div class="soft-skills">
+          <h3 class="sidebar-title">Soft Skills</h3>
+          <ul class="soft-skills-list">
+            <li class="soft-skills-item">
+              <span class="soft-skills-text">Bootstrap</span>
+            </li>
+            <li class="soft-skills-item">
+              <span class="soft-skills-text">Axios</span>
+            </li>
+            <li class="soft-skills-item">
+              <span class="soft-skills-text">GTD</span>
+            </li>
+            <li class="soft-skills-item">
+              <span class="soft-skills-text">Teamwork</span>
+            </li>
+          </ul>
         </div>
-        <div class="col-md-4">
-            <img src="/img/croissant.png" class="img-fluid rounded p-2 shadow" title="Croissant project"/>
+          </div>
         </div>
       </div>
-    
-    </div>
-  </div>
-    <div class="contact">
-      <h2 class="text-center">📮 Contact me</h2>
-      <a href="mailto:sandmood@gmail.com" class="email-link" title="e-mail to Maria Montyeva">
-        sandmood@gmail.com
-      </a>
-    </div>
-    </div>
+
      <footer>
         <div class="social-media">
               <div>
