--- a/projects.html
+++ b/projects.html
@@ -56,7 +56,7 @@
               <a class="nav-link" href="/projects.html">My projects</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/about.html#email">Contacts</a>
+              <a class="nav-link" href="/contact.html">Contacts</a>
             </li>
           </ul>
         </div>
@@ -88,12 +88,6 @@
     
     </div>
   </div>
-    <div class="contact">
-      <h2 class="text-center">📮 Contact me</h2>
-      <a href="mailto:sandmood@gmail.com" class="email-link" title="e-mail to Maria Montyeva">
-        sandmood@gmail.com
-      </a>
-    </div>
     </div>
      <footer>
         <div class="social-media">
