--- a/about.html
+++ b/about.html
@@ -62,7 +62,7 @@
         </div>
       </div>
     </nav>
-    <div class="about-section">
+    <div class="about-section container">
       <div class="row">
         <div class="col-md-4">
           <img src="/img/logo2.png" title="Maria Montyeva" class="mt-n1" />
@@ -76,7 +76,7 @@
     </div>
     </div>
     </div>
-    <div class="work-experience container mt-5">
+    <div class="work-experience container-fluid mt-5">
       <div class="row">
         <div class="col-md-6 work">
           <h3 class="title">Work Experience</h3>
