--- a/about.html
+++ b/about.html
@@ -154,7 +154,7 @@
               <span class="tech-skills-text">GitHub</span>
             </li>
             <li class="tech-skills-item">
-              <span class="tech-skills-text">Python</span>
+              <span class="tech-skills-text">Figma</span>
             </li>
             <li class="tech-skills-item">
               <span class="tech-skills-text">JavaScript</span>
