Bugs on mobile version was fixed

--- a/index.html
+++ b/index.html
@@ -72,19 +72,16 @@
     <p class="text-center m-5">
       Featured Project which my best projects be choice to show
     </p>
-    <div class="container">
+    <div class="container index">
       <div class="row mb-5">
-        <div class="col-md-6 d-none d-lg-block">
+        <div class="col-md-6 d-lg-block">
           <img src="img/pets.png" alt="" class="img-fluid rounded-2" />
         </div>
         <div class="col-md-6">
           <div class="project-description">
             <h2 class="mb-5">Pets App</h2>
             <p class="mb-5 text-meted">
-              Far far away, behind the word mountains, far from the countries
-              Vokalia and Consonantia, there live the blind texts. Separated
-              they live in Bookmarksgrove right at the coast of the Semantics, a
-              large language ocean. A small river named Duden flows by
+              This is my first HTML, CSS project with some JavaScript using functions. There is a simple landing page with all necessary information. It was made on just HTML and CSS content, with adding some extra layouts, fonts, colors, ingredients.
             </p>
             <a href="/landing-page.html" class="btn btn-branding-outline"> View project </a>
           </div>
@@ -95,30 +92,24 @@
           <div class="project-description">
             <h2 class="mb-5">Weather App</h2>
             <p class="mb-5 text-meted">
-              Far far away, behind the word mountains, far from the countries
-              Vokalia and Consonantia, there live the blind texts. Separated
-              they live in Bookmarksgrove right at the coast of the Semantics, a
-              large language ocean. A small river named Duden flows by
+              It is my first app which shows the user the weather podcast in the real time. We can see the weather for the current week in the any City wich we can indicate. The app was made on HTML, CSS and JavaScript. Axios functionality was used, were added Google Fonts, Bootstrap functions and some FontAwesome kits.
             </p>
             <a href="https://weather-sandmood.netlify.app/" class="btn btn-branding-outline"> View project </a>
           </div>
         </div>
-        <div class="col-md-6 d-none d-lg-block">
+        <div class="col-md-6 d-lg-block">
           <img src="img/weather.png" alt="" class="img-fluid rounded-2" />
         </div>
       </div>
       <div class="row mb-5">
-        <div class="col-md-6 d-none d-lg-block">
+        <div class="col-md-6 d-lg-block">
           <img src="img/croissant.png" alt="" class="img-fluid rounded-2" />
         </div>
         <div class="col-md-6">
           <div class="project-description">
             <h2 class="mb-5">Croissant App</h2>
             <p class="mb-5 text-meted">
-              Far far away, behind the word mountains, far from the countries
-              Vokalia and Consonantia, there live the blind texts. Separated
-              they live in Bookmarksgrove right at the coast of the Semantics, a
-              large language ocean. A small river named Duden flows by
+              This simple site was an example of SEO work. Here was indicated the main elements for the next promotion of the site name, its main directions and activities have been added. Optimization for the main search engines was added, keywords for search were registered, tags were added.
             </p>
             <a href="https://croissant-sandmood.netlify.app/" class="btn btn-branding-outline"> View project </a>
           </div>
