--- a/about.html
+++ b/about.html
@@ -65,12 +65,13 @@
     <div class="about-section container">
       <div class="row">
         <div class="col-md-4">
-          <img src="/img/logo2.png" title="Maria Montyeva" class="mt-n1" />
+          <img src="/img/logo2.png" title="Maria Montyeva" class="about-section-img"/>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-6 about-section-name">
     <h1 class="mb-4">Maria Montieva</h1>
     <h2 class="mb-5 text-secondary">🇺🇦 Front-end developer, based in Kyiv, Ukraine</h2>
-    <h4 class="mt-4">Economist, foreign economic activity specialist, MOONGOOSE outerwear brand owner. Novice Front-end, JS delevoper. In the process of studying Fullstack. 
+    <h4 class="mt-4">Hello everyone! I'm a switcher - all my carrier I was working of economist, foreign economic activity specialist. I am MOONGOOSE outerwear brand owner. 
+      Now I'm novice Front-end, JS delevoper. In the process of studying Fullstack. 
     </h4>
      <a href="/projects.html" class="btn btn-branding mt-5">See my projects</a>
     </div>
