--- a/projects.html
+++ b/projects.html
@@ -81,7 +81,7 @@
         <div class="col-md-4 mb-4">
             <a href="https://croissant-sandmood.netlify.app/"><img src="/img/croissant.png" class="img-fluid rounded p-2 shadow" title="Croissant project"/></a>
             <h3 class="text-center">Croissant Project</h3>
-            <p class="text-center text-muted">Built with HTML and CSS </p>
+            <p class="text-center text-muted">Built with SEO optimization  </p>
         </div>
         </div>
       </div>
