Soft skills changed

--- a/about.html
+++ b/about.html
@@ -155,16 +155,16 @@
               <span class="tech-skills-text">GitHub</span>
             </li>
             <li class="tech-skills-item">
-              <span class="tech-skills-text">Figma</span>
-            </li>
-            <li class="tech-skills-item">
               <span class="tech-skills-text">JavaScript</span>
             </li>
             <li class="tech-skills-item">
               <span class="tech-skills-text">React.js</span>
             </li>
-            <li class="tech-skills-item">
-              <span class="tech-skills-text">Node.js</span>
+             <li class="tech-skills-item">
+              <span class="tech-skills-text">Hosting</span>
+               <li class="tech-skills-item">
+              <span class="tech-skills-text">SEO</span>
+            </li>
             </li>
           </ul>
         </div>
@@ -179,10 +179,19 @@
               <span class="soft-skills-text">Axios</span>
             </li>
             <li class="soft-skills-item">
-              <span class="soft-skills-text">GTD</span>
+              <span class="soft-skills-text">Google Fonts</span>
             </li>
             <li class="soft-skills-item">
-              <span class="soft-skills-text">Teamwork</span>
+              <span class="soft-skills-text">FontAwesome</span>
+            </li>
+            <li class="soft-skills-item">
+              <span class="soft-skills-text">Netlify</span>
+            </li>
+            <li class="soft-skills-item">
+              <span class="soft-skills-text">Figma</span>
+            </li>
+            <li class="soft-skills-item">
+              <span class="soft-skills-text">Wordpress</span>
             </li>
           </ul>
         </div>
