footer to header-footer.html added

--- a/about.html
+++ b/about.html
@@ -71,7 +71,7 @@
     <h1 class="mb-4">Maria Montieva</h1>
     <h2 class="mb-5 text-secondary">🇺🇦 Front-end developer, based in Kyiv, Ukraine</h2>
     <h4 class="mt-4">Hello everyone! I'm a switcher - all my carrier I was working of economist, foreign economic activity specialist. I am MOONGOOSE outerwear brand owner. 
-      Now I'm novice Front-end, JS delevoper. In the process of studying Fullstack. 
+      <br/>Now I'm novice Front-end, JS delevoper. In the process of studying Fullstack. 
     </h4>
      <a href="/projects.html" class="btn btn-branding mt-5">See my projects</a>
     </div>
