--- a/header-footer.html
+++ b/header-footer.html
@@ -45,5 +45,26 @@
       </ul>
     </nav>
   </div>
+    <footer>
+      <div class="contact-box d-flex justify-content-between mb-5 d-none d-md-flex">
+        <div>
+<h4>
+  Work Inquiry
+</h4>
+<p class="text-muted">Let's work together</p>
+</div>
+      <div>
+        <a href="/contact.html" class="btn btn-branding"> Contact me </a>
+      </div>
+      </div>
+      <div class="d-flex justify-content-center mb-5">
+<a href="mailto:m.montieva@gmail.com" class="email-link">m.montieva@gmail.com</a>
+</div>
+<div class="social-link d-flex justify-content-center">
+  <a href="https://www.instagram.com/sandmood/"><i class="fa-brands fa-instagram"></i></a>
+  <a href="https://github.com/sandmood?tab=repositories"><i class="fa-brands fa-github"></i></a>
+  <a href="https://www.facebook.com/maria.montyeva"><i class="fa-brands fa-facebook"></i></a>
+</div>
+    </footer>
 </body>
 </html>
