SEO optimisation added

--- a/header-footer.html
+++ b/header-footer.html
@@ -65,6 +65,9 @@
   <a href="https://github.com/sandmood?tab=repositories"><i class="fa-brands fa-github"></i></a>
   <a href="https://www.facebook.com/maria.montyeva"><i class="fa-brands fa-facebook"></i></a>
 </div>
+<p class="text-center mt-4">
+  This project was coded by Maria Montieva and it is <a href="https://github.com/sandmood/Portfolio-project">open-sourced.</a>
+</p>
     </footer>
 </body>
 </html>
