--- a/about.html
+++ b/about.html
@@ -28,7 +28,8 @@
       src="https://kit.fontawesome.com/f5ca19a2cd.js"
       crossorigin="anonymous"
     ></script>
-    <title>Front-end developer Maria Montieva</title>
+    <meta name="description" content="Maria is a front-end developer based in Ukraine.">
+    <title>About Maria Montieva</title>
   </head>
   <body>
    <nav class="navbar navbar-expand-lg bg-light fixed-top ps-5">
@@ -47,16 +48,16 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/">Home</a>
+              <a class="nav-link" aria-current="page" href="/" title="Homepage">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/about.html">About</a>
+              <a class="nav-link active" href="/about.html" title="About Maria">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/projects.html">My projects</a>
+              <a class="nav-link" href="/projects.html" title="Maria's Projects">My projects</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/contact.html">Contacts</a>
+              <a class="nav-link" href="/contact.html" title="Contact Maria">Contacts</a>
             </li>
           </ul>
         </div>
@@ -65,7 +66,7 @@
     <div class="about-section container">
       <div class="row">
         <div class="col-md-4">
-          <img src="/img/logo2.png" title="Maria Montyeva" class="about-section-img"/>
+          <img src="/img/logo2.png" title="Maria Montieva - Front-end developer" class="about-section-img"/>
         </div>
         <div class="col-md-6 about-section-name">
     <h1 class="mb-4">Maria Montieva</h1>
@@ -202,14 +203,16 @@
      <footer>
         <div class="social-media">
               <div>
-               <a href="https://www.facebook.com/maria.montyeva"><i class="fa-brands fa-facebook fa-2xl"></i></a>
+                <a href="https://www.facebook.com/maria.montyeva" title="Maria's Facebook"><i class="fa-brands fa-facebook fa-2xl"></i></a>
               </div>
               <div>
-              <a href="https://github.com/sandmood?tab=repositories"><i class="fa-brands fa-github fa-2xl"></i></a>
+              <a href="https://github.com/sandmood?tab=repositories" title="Maria's GitHub Repositories"><i class="fa-brands fa-github fa-2xl"></i></a>
               </div>
                <div>
-               <a href=" https://www.linkedin.com/in/maria-montyeva-b4243595/"><i class="fa-brands fa-linkedin-in fa-2xl"></i></a>
+               <a href=" https://www.linkedin.com/in/maria-montyeva-b4243595/" title="Maria's Linkedin"><i class="fa-brands fa-linkedin-in fa-2xl"></i></a>
               </div>
+        </div>
+        <p class="text-center mt-4">This project was coded by Maria Montieva and it is <a href="https://github.com/sandmood/Portfolio-project">open-sourced.</a></p>
               </footer>
   </body>
 </html>
