--- a/contact.html
+++ b/contact.html
@@ -28,8 +28,8 @@
       src="https://kit.fontawesome.com/f5ca19a2cd.js"
       crossorigin="anonymous"
     ></script>
-    <title>Front-end developer Maria Montieva</title>
-  </head>
+    <meta name="description" content="Maria is a front-end developer based in Ukraine.">
+    <title>Contact Maria Montieva</title>
   <body>
    <nav class="navbar navbar-expand-lg bg-light fixed-top ps-5">
       <div class="container-fluid">
@@ -47,16 +47,16 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/">Home</a>
+           <a class="nav-link" aria-current="page" href="/" title="Homepage">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/about.html">About</a>
+              <a class="nav-link" href="/about.html" title="About Maria">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/projects.html">My projects</a>
+              <a class="nav-link" href="/projects.html" title="Maria's Projects">My projects</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/contact.html">Contacts</a>
+              <a class="nav-link active" href="/contact.html" title="Contact Maria">Contacts</a>
             </li>
           </ul>
         </div>
@@ -140,14 +140,16 @@
      <footer>
         <div class="social-media">
               <div>
-               <a href="https://www.facebook.com/maria.montyeva"><i class="fa-brands fa-facebook fa-2xl"></i></a>
+                <a href="https://www.facebook.com/maria.montyeva" title="Maria's Facebook"><i class="fa-brands fa-facebook fa-2xl"></i></a>
               </div>
               <div>
-              <a href="https://github.com/sandmood?tab=repositories"><i class="fa-brands fa-github fa-2xl"></i></a>
+              <a href="https://github.com/sandmood?tab=repositories" title="Maria's GitHub Repositories"><i class="fa-brands fa-github fa-2xl"></i></a>
               </div>
                <div>
-               <a href=" https://www.linkedin.com/in/maria-montyeva-b4243595/"><i class="fa-brands fa-linkedin-in fa-2xl"></i></a>
+               <a href=" https://www.linkedin.com/in/maria-montyeva-b4243595/" title="Maria's Linkedin"><i class="fa-brands fa-linkedin-in fa-2xl"></i></a>
               </div>
+  </div>
+                      <p class="text-center mt-4">This project was coded by Maria Montieva and it is <a href="https://github.com/sandmood/Portfolio-project">open-sourced.</a></p>
               </footer>
   </body>
 </html>
