--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       src="https://kit.fontawesome.com/f5ca19a2cd.js"
       crossorigin="anonymous"
     ></script>
+    <meta name="description" content="Maria is a front-end developer based in Ukraine.">
     <title>Front-end developer Maria Montieva</title>
   </head>
   <body>
@@ -47,16 +48,16 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/">Home</a>
+           <a class="nav-link active" aria-current="page" href="/" title="Homepage">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/about.html">About</a>
+              <a class="nav-link" href="/about.html" title="About Maria">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/projects.html">My projects</a>
+              <a class="nav-link" href="/projects.html" title="Maria's Projects">My projects</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/contact.html">Contacts</a>
+              <a class="nav-link" href="/contact.html" title="Contact Maria">Contacts</a>
             </li>
           </ul>
         </div>
@@ -66,8 +67,7 @@
       <p class="text-center fs-1 mb-4">🤝Hello! I am</p>
       <h1 class="mb-4">Maria Montieva</h1>
       <h2 class="mb-5 text-secondary">🇺🇦 Front-end developer, based in Kyiv, Ukraine</h2>
-      <div><a href="#" class="btn btn-branding">Contact me</a>
-      </div>
+      <a href="/contact.html" class="btn btn-branding">Contact me</a>
     </div>
     <p class="text-center m-5">
       Featured Project which my best projects be choice to show
@@ -75,7 +75,7 @@
     <div class="container index">
       <div class="row mb-5">
         <div class="col-md-6 d-lg-block">
-          <img src="img/pets.png" alt="" class="img-fluid rounded-2" />
+          <img src="img/pets.png" alt="" title="Pet's adopt propject" class="img-fluid rounded-2" />
         </div>
         <div class="col-md-6">
           <div class="project-description">
@@ -92,18 +92,18 @@
           <div class="project-description">
             <h2 class="mb-5">Weather App</h2>
             <p class="mb-5 text-meted">
-              It is my first app which shows the user the weather podcast in the real time. We can see the weather for the current week in the any City wich we can indicate. The app was made on HTML, CSS and JavaScript. Axios functionality was used, were added Google Fonts, Bootstrap functions and some FontAwesome kits.
+              It is my first app which shows the user the weather forecast in the real time. We can see the weather for the current week in the any City wich we can indicate. The app was made on HTML, CSS and JavaScript. Axios functionality was used, were added Google Fonts, Bootstrap functions and some FontAwesome kits.
             </p>
             <a href="https://weather-sandmood.netlify.app/" class="btn btn-branding-outline"> View project </a>
           </div>
         </div>
         <div class="col-md-6 d-lg-block">
-          <img src="img/weather.png" alt="" class="img-fluid rounded-2" />
+          <img src="img/weather.png" alt=""  title="Weather forecast App" class="img-fluid rounded-2" />
         </div>
       </div>
       <div class="row mb-5">
         <div class="col-md-6 d-lg-block">
-          <img src="img/croissant.png" alt="" class="img-fluid rounded-2" />
+          <img src="img/croissant.png" alt="" title="SEO optimization Project" class="img-fluid rounded-2" />
         </div>
         <div class="col-md-6">
           <div class="project-description">
@@ -119,15 +119,18 @@
         <footer>
         <div class="social-media">
               <div>
-               <a href="https://www.facebook.com/maria.montyeva"><i class="fa-brands fa-facebook fa-2xl"></i></a>
+               <a href="https://www.facebook.com/maria.montyeva" title="Maria's Facebook"><i class="fa-brands fa-facebook fa-2xl"></i></a>
               </div>
               <div>
-              <a href="https://github.com/sandmood?tab=repositories"><i class="fa-brands fa-github fa-2xl"></i></a>
+              <a href="https://github.com/sandmood?tab=repositories" title="Maria's GitHub Repositories"><i class="fa-brands fa-github fa-2xl"></i></a>
               </div>
                <div>
-               <a href=" https://www.linkedin.com/in/maria-montyeva-b4243595/"><i class="fa-brands fa-linkedin-in fa-2xl"></i></a>
+               <a href=" https://www.linkedin.com/in/maria-montyeva-b4243595/" title="Maria's Linkedin"><i class="fa-brands fa-linkedin-in fa-2xl"></i></a>
               </div>
               </div>
+              <p class="text-center mt-4">
+  This project was coded by Maria Montieva and it is <a href="https://github.com/sandmood/Portfolio-project">open-sourced.</a>
+</p>
               </footer>
   </body>
 </html>
