--- a/projects.html
+++ b/projects.html
@@ -28,7 +28,8 @@
       src="https://kit.fontawesome.com/f5ca19a2cd.js"
       crossorigin="anonymous"
     ></script>
-    <title>Front-end developer Maria Montyeva</title>
+   <meta name="description" content="Maria is a front-end developer based in Ukraine.">
+    <title>Projects of Maria Montieva</title>
   </head>
   <body>
    <nav class="navbar navbar-expand-lg bg-light fixed-top ps-5">
@@ -47,16 +48,16 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/">Home</a>
+             <a class="nav-link" aria-current="page" href="/" title="Homepage">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/about.html">About</a>
+              <a class="nav-link" href="/about.html" title="About Maria">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/projects.html">My projects</a>
+              <a class="nav-link active" href="/projects.html" title="Maria's Projects">My projects</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/contact.html">Contacts</a>
+              <a class="nav-link" href="/contact.html" title="Contact Maria">Contacts</a>
             </li>
           </ul>
         </div>
@@ -69,17 +70,17 @@
     <div class="container">
       <div class="row">
         <div class="col-md-4 mb-4">
-             <a href="/landing-page.html"><img src="/img/pets.png" class="img-fluid rounded p-2 shadow" title="Pets project"/></a>
+             <a href="/landing-page.html"><img src="/img/pets.png" class="img-fluid rounded p-2 shadow" title="Pets adopt Project"/></a>
             <h3 class="text-center">Pets Project</h3>
             <p class="text-center text-muted">Built with HTML and CSS </p>
         </div>
         <div class="col-md-4 mb-4">
-            <a href="https://weather-sandmood.netlify.app/"><img src="/img/weather.png" class="img-fluid rounded p-2 shadow" title="Weather App"/></a>
+            <a href="https://weather-sandmood.netlify.app/"><img src="/img/weather.png" class="img-fluid rounded p-2 shadow" title="Weather forecast App"/></a>
             <h3 class="text-center">Weather Project</h3>
             <p class="text-center text-muted">Built with HTML, CSS and JS </p>
         </div>
         <div class="col-md-4 mb-4">
-            <a href="https://croissant-sandmood.netlify.app/"><img src="/img/croissant.png" class="img-fluid rounded p-2 shadow" title="Croissant project"/></a>
+            <a href="https://croissant-sandmood.netlify.app/"><img src="/img/croissant.png" class="img-fluid rounded p-2 shadow" title="SEO optimization Project"/></a>
             <h3 class="text-center">Croissant Project</h3>
             <p class="text-center text-muted">Built with SEO optimization  </p>
         </div>
@@ -92,14 +93,16 @@
      <footer>
         <div class="social-media">
               <div>
-               <a href="https://www.facebook.com/maria.montyeva"><i class="fa-brands fa-facebook fa-2xl"></i></a>
+                <a href="https://www.facebook.com/maria.montyeva" title="Maria's Facebook"><i class="fa-brands fa-facebook fa-2xl"></i></a>
               </div>
               <div>
-              <a href="https://github.com/sandmood?tab=repositories"><i class="fa-brands fa-github fa-2xl"></i></a>
+              <a href="https://github.com/sandmood?tab=repositories" title="Maria's GitHub Repositories"><i class="fa-brands fa-github fa-2xl"></i></a>
               </div>
                <div>
-               <a href=" https://www.linkedin.com/in/maria-montyeva-b4243595/"><i class="fa-brands fa-linkedin-in fa-2xl"></i></a>
+               <a href=" https://www.linkedin.com/in/maria-montyeva-b4243595/" title="Maria's Linkedin"><i class="fa-brands fa-linkedin-in fa-2xl"></i></a>
               </div>
+              </div>
+                      <p class="text-center mt-4">This project was coded by Maria Montieva and it is <a href="https://github.com/sandmood/Portfolio-project">open-sourced.</a></p>
               </footer>
   </body>
 </html>
