--- a/contact.html
+++ b/contact.html
@@ -68,15 +68,15 @@
       <div class="row">
           <div class="col-md-4 text-center">
             <span class="contact-img"><i class="fas fa-phone mt-4 fa-2x"></i></span>
-              <p><a href="tel:+380502027951">+380 50 2027951</a></p>
+              <p><a href="tel:+380502027951" title="Phone number">+380 50 2027951</a></p>
           </div>
             <div class="col-md-4 text-center">
               <span class="contact-img"><i class="fas fa-envelope mt-4 fa-2x"></i></span>
-              <p><a href="mailto:m.montieva@gmail.com">m.montieva@gmail.com</a></p>
+              <p><a href="mailto:m.montieva@gmail.com" title="Email">m.montieva@gmail.com</a></p>
               </div>
                <div class="col-md-4 text-center">
               <span class="contact-img"><i class="fa-solid fa-location-dot mt-4 fa-2x"></i></span>
-              <p><a href="https://goo.gl/maps/gMZ1oD3waQFx8Nij6">Kyiv, 03150, Ukraine</a></p>
+              <p><a href="https://goo.gl/maps/gMZ1oD3waQFx8Nij6" title="Address">Kyiv, 03150, Ukraine</a></p>
             </div>
           </div>
               </div>
