--- a/about.html
+++ b/about.html
@@ -177,6 +177,9 @@
               <span class="soft-skills-text">Bootstrap</span>
             </li>
             <li class="soft-skills-item">
+              <span class="soft-skills-text">Flexbox</span>
+            </li>
+            <li class="soft-skills-item">
               <span class="soft-skills-text">Axios</span>
             </li>
             <li class="soft-skills-item">
