--- a/contact.html
+++ b/contact.html
@@ -149,7 +149,7 @@
                <a href=" https://www.linkedin.com/in/maria-montyeva-b4243595/" title="Maria's Linkedin"><i class="fa-brands fa-linkedin-in fa-2xl"></i></a>
               </div>
   </div>
-                      <p class="text-center mt-4">This project was coded by Maria Montieva and it is <a href="https://github.com/sandmood/Portfolio-project">open-sourced.</a></p>
+                      <p class="text-center mt-4 p-4">This project was coded by Maria Montieva and it is <a href="https://github.com/sandmood/Portfolio-project">open-sourced.</a></p>
               </footer>
   </body>
 </html>
